cluster/base/infrastructure/10-network-policies/allow-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-dns-egress
spec:
  endpointSelector:
    matchExpressions:
      - key: reserved.ingress
        operator: DoesNotExist
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
