cluster/base/infrastructure/10-network-policies/allow-talos-backup.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-talos-backup-egress
  namespace: talos-backup
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: ""
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.s3.amazonaws.com"
        - matchPattern: "s3.amazonaws.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
