cluster/base/infrastructure/10-network-policies/allow-velero-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-velero-egress
  namespace: velero
spec:
  # Velero spawns ephemeral data-mover pods (velero.io/pod-volume-backup label) and
  # repo-maintenance job pods (velero.io/repo-name label) that do NOT carry the
  # app.kubernetes.io/name=velero label but still need to reach SeaweedFS and AWS S3.
  # Select all pods in the namespace so every job type is covered.
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toFQDNs:
        - matchPattern: '*.s3.amazonaws.com'
        - matchPattern: s3.amazonaws.com
        - matchPattern: '*.s3.eu-central-1.amazonaws.com'
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
