cluster/base/infrastructure/10-network-policies/allow-zot-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-zot-egress
  namespace: zot
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zot
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
